--- a/zpi_doc_template.tex
+++ b/zpi_doc_template.tex
@@ -59,11 +59,16 @@ Projekt bêdzie realizowany przy u¿yciu (zaadaptowanej do istniej¹cych warunków) 
 \subsection{User story 1}
 Aplikacja zawiera rozbudowany interfejs z systemem logowania. Klient posiada mo¿liwoœæ zarejestrowania siê i logowania podobnie jak administrator to jest: magazynier.
 \subsection{User story 2}
-Klient po zalogowaniu siê musi mieæ mo¿liwoœæ zamawiania danego produktu, sprawdzenia statusu zamówienia, wgl¹du do cennika, wyszukiwania produktów, podpowiedzi najczeœciej zamawianych produktów.
+Klient po zalogowaniu siê musi mieæ mo¿liwoœæ zamawiania danego produktu, sprawdzenia statusu zamówienia, wgl¹du do cennika, wyszukiwania produktów, podpowiedzi najczêœciej zamawianych produktów.
 \subsection{User story 3}
 Klient dostaje mo¿liwoœæ wysy³ki faktur lub paragonów na e-mail podany przy rejestracji.
 \subsection{User story 4}
-Magazynier mma mo¿liwoœæ wgl¹du do zamówieñ oraz do specjalnego œrodowiska do tworzenia faktur, zmieniania statusów zamówieñ.
+Magazynier ma mo¿liwoœæ wgl¹du do zamówieñ oraz do specjalnego œrodowiska do tworzenia faktur, zmieniania statusów zamówieñ.
+\subsection{User story 5}
+Pracownik hurtowni/magazynier powinien mieæ mo¿liwoœæ sprawdzenia dostêpnoœci towaru.
+\subsection{User story 6}
+ 
+
 
 \section{Harmonogram}
 
