--- a/zpi_doc_template.tex
+++ b/zpi_doc_template.tex
@@ -4,9 +4,7 @@
 \usepackage{url}
 
 \title{\bf{Aplikacja WEB do obs³ugi hurtowni}}
-\author{{\em Jakub Wêglarz}}
-\author{{\em £ukasz Wide³}}
-\author{{\em Micha³ W¹cha³a}}
+\author{\em Jakub Wêglarz \\ \em £ukasz Wide³ \\ \em Micha³ W¹cha³a }
 \date{}
 
 \begin{document}
@@ -57,16 +55,37 @@ Projekt bêdzie realizowany przy u¿yciu (zaadaptowanej do istniej¹cych warunków) 
 <<Przedstawiæ listê wymagañ u¿ytkownika w postaci ,,historyjek'' (User stories). Ka¿da historyjka powinna opisywaæ jedn¹ cechê systemu. Struktura: As a [type of user], I want [to perform some task] so that I can [achieve some goal/benefit/value] (zob. np. \cite{us}).>>
 
 \subsection{User story 1}
-Aplikacja zawiera rozbudowany interfejs z systemem logowania. Klient posiada mo¿liwoœæ zarejestrowania siê i logowania podobnie jak administrator to jest: magazynier.
+Jako klient chcê mieæ mo¿liwoœæ zalogowania na konto klienta wczeœniej utworzone przez administratora w celu korzystania z funkcji programu.
 \subsection{User story 2}
-Klient po zalogowaniu siê musi mieæ mo¿liwoœæ zamawiania danego produktu, sprawdzenia statusu zamówienia, wgl¹du do cennika, wyszukiwania produktów, podpowiedzi najczêœciej zamawianych produktów.
+Jako klient chcê mieæ mo¿liwoœæ sk³adania zamówieñ w celu dokonania zakupu.
 \subsection{User story 3}
-Klient dostaje mo¿liwoœæ wysy³ki faktur lub paragonów na e-mail podany przy rejestracji.
+Jako klient chcê mieæ mo¿liwoœæ podgl¹du zamówienia w celu weryfikacji poprawnoœci z³o¿onego zamówienia. 
 \subsection{User story 4}
-Magazynier ma mo¿liwoœæ wgl¹du do zamówieñ oraz do specjalnego œrodowiska do tworzenia faktur, zmieniania statusów zamówieñ.
+Jako klient chcê mieæ mo¿liwoœæ edycji zamówienia z poziomu podgl¹du aby w przypadku ewentualnych pomy³ek mieæ mo¿liwoœæ ich skorygowania.
 \subsection{User story 5}
-Pracownik hurtowni/magazynier powinien mieæ mo¿liwoœæ sprawdzenia dostêpnoœci towaru.
+Jako klient chcê mieæ mo¿liwoœæ pobierania faktur.
 \subsection{User story 6}
+Jako klient chcê mieæ mo¿liwoœæ otrzymania faktur na pocztê elektroniczn¹.
+\subsection{User story 7}
+Jako klient chcê mieæ mo¿liwoœæ podgl¹du dostêpnych produktów.
+\subsection{User story 8}
+Jako klient chcê mieæ mo¿liwoœæ wyszukiwania produktów aby szybciej znajdywaæ interesuj¹ce mnie rzeczy.
+\subsection{User story 9}
+Jako klient chcê mieæ mo¿liwoœæ sprawdzania stanu realizacji zamówieñ gdy¿ jestem niecierpliwy.
+\subsection{User story 10}
+Jako klient chcê mieæ mo¿liwoœæ dodawania i edycji danych osobowych w celu p³ynnego kontaktu z obs³ug¹ sklepu.
+\subsection{User story 11}
+Jako pracownik chcê mieæ mo¿liwoœæ logowania siê do konta pracowniczego wczeœniej utworzonego przez administratora w celu realizacji swoich obowi¹zków.
+\subsection{User story 12}
+Jako pracownik chcê mieæ mo¿liwoœæ realizacji zamówieñ oraz/lub zmiany ich stanu.
+\subsection{User story 13}
+Jako pracownik chcê mieæ mo¿liwoœæ wystawiania faktur.
+\subsection{User story 14}
+Jako pracownik chcê mieæ mo¿liwoœæ zamawiania towaru na magazyn aby utrzymaæ ci¹g³oœæ sprzeda¿y.
+\subsection{User story 15}
+Jako pracownik chcê mieæ mo¿liwoœæ sprawdzania stanu magazynu aby wiedzieæ jaki towar ewentualnie domówiæ.
+\subsection{User story 16}
+Jako pracownik chcê mieæ mo¿liwoœæ wystawiania zestawieñ przyk³adowo najczêœciej sprzedawanych towarów w danym miesi¹cu. 
  
 
 
