user story mordo

--- a/zpi_doc_template.tex
+++ b/zpi_doc_template.tex
@@ -63,29 +63,29 @@ Jako klient chcê mieæ mo¿liwoœæ podgl¹du zamówienia w celu weryfikacji poprawnoœ
 \subsection{User story 4}
 Jako klient chcê mieæ mo¿liwoœæ edycji zamówienia z poziomu podgl¹du aby w przypadku ewentualnych pomy³ek mieæ mo¿liwoœæ ich skorygowania.
 \subsection{User story 5}
-Jako klient chcê mieæ mo¿liwoœæ pobierania faktur.
+Jako klient chcê mieæ mo¿liwoœæ pobierania faktur aby wygodnie rozliczaæ zakupy.
 \subsection{User story 6}
-Jako klient chcê mieæ mo¿liwoœæ otrzymania faktur na pocztê elektroniczn¹.
+Jako klient chcê mieæ mo¿liwoœæ otrzymania faktur na pocztê elektroniczn¹ w celu prowadzenia archiwum faktur w formie elektoronicznej.
 \subsection{User story 7}
-Jako klient chcê mieæ mo¿liwoœæ podgl¹du dostêpnych produktów.
+Jako klient chcê mieæ mo¿liwoœæ podgl¹du dostêpnych produktów aby zapoznaæ siê z nowoœciami.
 \subsection{User story 8}
 Jako klient chcê mieæ mo¿liwoœæ wyszukiwania produktów aby szybciej znajdywaæ interesuj¹ce mnie rzeczy.
 \subsection{User story 9}
-Jako klient chcê mieæ mo¿liwoœæ sprawdzania stanu realizacji zamówieñ gdy¿ jestem niecierpliwy.
+Jako klient chcê mieæ mo¿liwoœæ sprawdzania stanu realizacji zamówieñ aby kontrolowaæ terminy dostaw.
 \subsection{User story 10}
 Jako klient chcê mieæ mo¿liwoœæ dodawania i edycji danych osobowych w celu p³ynnego kontaktu z obs³ug¹ sklepu.
 \subsection{User story 11}
 Jako pracownik chcê mieæ mo¿liwoœæ logowania siê do konta pracowniczego wczeœniej utworzonego przez administratora w celu realizacji swoich obowi¹zków.
 \subsection{User story 12}
-Jako pracownik chcê mieæ mo¿liwoœæ realizacji zamówieñ oraz/lub zmiany ich stanu.
+Jako pracownik chcê mieæ mo¿liwoœæ realizacji zamówieñ oraz/lub zmiany ich stanu w celu informowania klientów na bie¿¹co o postêpie.
 \subsection{User story 13}
-Jako pracownik chcê mieæ mo¿liwoœæ wystawiania faktur.
+Jako pracownik chcê mieæ mo¿liwoœæ automatycznego generowania faktur do zamówieñ w celu ³atwego rozliczania klientów.  
 \subsection{User story 14}
 Jako pracownik chcê mieæ mo¿liwoœæ zamawiania towaru na magazyn aby utrzymaæ ci¹g³oœæ sprzeda¿y.
 \subsection{User story 15}
 Jako pracownik chcê mieæ mo¿liwoœæ sprawdzania stanu magazynu aby wiedzieæ jaki towar ewentualnie domówiæ.
 \subsection{User story 16}
-Jako pracownik chcê mieæ mo¿liwoœæ wystawiania zestawieñ przyk³adowo najczêœciej sprzedawanych towarów w danym miesi¹cu. 
+Jako pracownik chcê mieæ mo¿liwoœæ wystawiania zestawieñ przyk³adowo najczêœciej sprzedawanych towarów w danym miesi¹cu aby przygotowaæ harmonogram dostaw. 
  
 
 
