--- a/zpi_doc_template.tex
+++ b/zpi_doc_template.tex
@@ -45,7 +45,7 @@ Celem projektu jest stworzenie aplikacji WEB do obs³ugi hurtownii.
 
 \subsection{Potencjalny odbiorca produktu (klient)}
 
-<<Okreœliæ potencjalnego klienta (wraz z uzasadnieniem)>>.
+Hurtownia sprzêtu komputerowego.
 
 \subsection{Metodyka}
 
