--- a/zpi_doc_template.tex
+++ b/zpi_doc_template.tex
@@ -57,11 +57,11 @@ Projekt bêdzie realizowany przy u¿yciu (zaadaptowanej do istniej¹cych warunków) 
 \subsection{User story 1}
 Jako klient chcê mieæ mo¿liwoœæ zalogowania na konto klienta wczeœniej utworzone przez administratora w celu korzystania z funkcji programu.
 \subsection{User story 2}
-Jako klient chcê mieæ mo¿liwoœæ sk³adania zamówieñ w celu dokonania zakupu.
+Jako klient chcê mieæ mo¿liwoœæ sk³adania zamówieñ w celu wspó³pracy z hurtowni¹.
 \subsection{User story 3}
 Jako klient chcê mieæ mo¿liwoœæ podgl¹du zamówienia w celu weryfikacji poprawnoœci z³o¿onego zamówienia. 
 \subsection{User story 4}
-Jako klient chcê mieæ mo¿liwoœæ edycji zamówienia z poziomu podgl¹du aby w przypadku ewentualnych pomy³ek mieæ mo¿liwoœæ ich skorygowania.
+Jako klient chcê mieæ mo¿liwoœæ edycji zamówienia z poziomu podgl¹du aby w przypadku pomy³ek mieæ mo¿liwoœæ ich skorygowania.
 \subsection{User story 5}
 Jako klient chcê mieæ mo¿liwoœæ pobierania faktur aby wygodnie rozliczaæ zakupy.
 \subsection{User story 6}
@@ -75,7 +75,7 @@ Jako klient chcê mieæ mo¿liwoœæ sprawdzania stanu realizacji zamówieñ aby kontro
 \subsection{User story 10}
 Jako klient chcê mieæ mo¿liwoœæ dodawania i edycji danych osobowych w celu p³ynnego kontaktu z obs³ug¹ sklepu.
 \subsection{User story 11}
-Jako pracownik chcê mieæ mo¿liwoœæ logowania siê do konta pracowniczego wczeœniej utworzonego przez administratora w celu realizacji swoich obowi¹zków.
+Jako pracownik chcê mieæ mo¿liwoœæ logowania siê do konta pracowniczego wczeœniej utworzonego przez administratora w celu obs³ugi zamówieñ.
 \subsection{User story 12}
 Jako pracownik chcê mieæ mo¿liwoœæ realizacji zamówieñ oraz/lub zmiany ich stanu w celu informowania klientów na bie¿¹co o postêpie.
 \subsection{User story 13}
