harmonogram+backlog(fragment)
harmonogram+backlog(fragment)

--- a/zpi_doc_template.tex
+++ b/zpi_doc_template.tex
@@ -149,20 +149,38 @@ Micha³ W¹cha³a \\
 \section{Product Backlog}
 
 \subsection{Backlog Item 1}
+\paragraph{Tytu³ zadania.} Zaprojektowanie i wdro¿enie bazy danych.
+\paragraph{Opis zadania.}  Zaprojektowanie i wdro¿enie bazy danych na silniku MariaDB, przechowuj¹cej dane produktów, dostawców, stany magazynowe, dane klientów, statusy zamówieñ.
+\paragraph{Priorytet.} Bardzo Wa¿ne.
+\paragraph{Definition of Done.} Utworzona baza danych z tabelami zawieraj¹cymi  pola z odpowiednimi atrybutami.
+
+\subsection{Backlog Item 2}
 \paragraph{Tytu³ zadania.} Logowanie Klienta.
-\paragraph{Opis zadania.} Utworzenie interfejsu graficznego oraz napisanie skryptu logowania wraz z obs³ug¹ sesji.
+\paragraph{Opis zadania.} Utworzenie interfejsu graficznego oraz napisanie skryptu logowania klienta wraz z obs³ug¹ sesji.
 \paragraph{Priorytet.} Bardzo Wa¿ne.
 \paragraph{Definition of Done.} Klient ma mo¿liwoœæ zalogowania siê do systemu podaj¹c login i has³o ustalone przez administratora. Zaimplementowana jest obs³uga sesji logowania.
 
-\subsection{Backlog Item 2}
-\paragraph{Tytu³ zadania.} Sk³adanie zamówieñ.
-\paragraph{Opis zadania.} Zaprojektowanie i wdro¿enie bazy danych przechowuj¹cej dane produktów, dostawców, stany magazynowe i dane klientów. Zaprojektowanie i wdro¿enie skryptu php umo¿liwiaj¹cego z³o¿enie zamówienia czyli zapisanie w bazie danych o produktach wybranych przez klienta. Zaprojektowanie i wdro¿enie interfejsu w jêzyku html do obs³ugi skryptu.
-\paragraph{Priorytet.} Bardzo Wa¿ne.
-\paragraph{Definition of Done.} Klient ma mo¿liwoœæ z³o¿enia zamówienia, które zostaje zapisane w bazie danych.
-
 \subsection{Backlog Item 3}
+\paragraph{Tytu³ zadania.} Logowanie pracownika.
+\paragraph{Opis zadania.} Utworzenie interfejsu graficznego oraz napisanie skryptu logowania pracownika wraz z obs³ug¹ sesji.
+\paragraph{Priorytet.} Bardzo Wa¿ne.
+\paragraph{Definition of Done.} Pracownik ma mo¿liwoœæ zalogowania siê do systemu podaj¹c login i has³o ustalone przez administratora. Zaimplementowana jest obs³uga sesji logowania.
+
+\subsection{Backlog Item 4}
+\paragraph{Tytu³ zadania.} Interfejs graficzny GUI.
+\paragraph{Opis zadania.} Zaprojektowanie i wdro¿enie interfejsu graficznego do obs³ugi wszystkich funkcjonalnoœci platformy zarówno po stronie klienta jak pracownika.
+\paragraph{Priorytet.} Bardzo Wa¿ne.
+\paragraph{Definition of Done.} Interfejs daje mo¿liwoœc wywo³ania i obs³ugi ka¿dej funkcji aplikacji.
+
+\subsection{Backlog Item 5}
+\paragraph{Tytu³ zadania.} Sk³adanie zamówieñ.
+\paragraph{Opis zadania.} Zaprojektowanie i wdro¿enie skryptu php umo¿liwiaj¹cego z³o¿enie zamówienia czyli zapisanie w bazie danych o produktach wybranych przez klienta. Zaprojektowanie i wdro¿enie interfejsu w jêzyku html do obs³ugi skryptu.
+\paragraph{Priorytet.} Bardzo Wa¿ne.
+\paragraph{Definition of Done.} Klient ma mo¿liwoœæ wskazania produktów i  z³o¿enia zamówienia, które zostaje zapisane w bazie danych.
+
+\subsection{Backlog Item 6}
 \paragraph{Tytu³ zadania.} Podgl¹d dostêpnych produktów.
-\paragraph{Opis zadania.} 
+\paragraph{Opis zadania.} Zaprojektowanie skryptu pozwalaj¹cego przegl¹daæ wszystkie dostêpne produkty wg kategorii zaznaczonej przez klienta, czyli pobieraj¹cego dane z bazy.
 \paragraph{Priorytet.} Bardzo Wa¿ne.
 \paragraph{Definition of Done.} Klient ma mo¿liwoœæ z³o¿enia zamówienia, które zostaje zapisane w bazie danych.
 
