--- a/zpi_doc_template.tex
+++ b/zpi_doc_template.tex
@@ -41,7 +41,7 @@ Prowadz¹cy: dr hab. Marcin Mazur
 
 \subsection{Cel projektu (produkt)}
 
-Celem projektu jest stworzenie aplikacji WEB do obs³ugi hurtownii.
+Celem projektu jest stworzenie aplikacji WEB do obs³ugi hurtowni.
 
 \subsection{Potencjalny odbiorca produktu (klient)}
 
@@ -296,15 +296,36 @@ Micha³ W¹cha³a \\
 
 \subsection{Realizacja}
 
-\paragraph{Tytu³ zadania.} <<Tytu³>>.
-\subparagraph{Wykonawca.} <<Wykonawca>>.
+\paragraph{Tytu³ zadania.} Zaprojektowanie i wdro¿enie bazy danych.
+\subparagraph{Wykonawca.} Micha³ W¹cha³a
 \subparagraph{Realizacja.} <<Sprawozdanie z realizacji zadania (w tym ocena zgodnoœci z estymat¹). Kod programu (œrodowisko \texttt{verbatim}): \begin{verbatim}
 for (i=1; i<10; i++)
 ...
 \end{verbatim}>>.
 
-\paragraph{Tytu³ zadania.} <<Tytu³>>.
-\subparagraph{Wykonawca.} <<Wykonawca>>.
+\paragraph{Tytu³ zadania.} Logowanie klienta.
+\subparagraph{Wykonawca.} Jakub Wêglarz.
+\subparagraph{Realizacja.} <<Sprawozdanie z realizacji zadania (w tym ocena zgodnoœci z estymat¹). Kod programu (œrodowisko \texttt{verbatim}): \begin{verbatim}
+for (i=1; i<10; i++)
+...
+\end{verbatim}>>.
+
+\paragraph{Tytu³ zadania.} Logowanie pracownika.
+\subparagraph{Wykonawca.} Jakub Wêglarz.
+\subparagraph{Realizacja.} <<Sprawozdanie z realizacji zadania (w tym ocena zgodnoœci z estymat¹). Kod programu (œrodowisko \texttt{verbatim}): \begin{verbatim}
+for (i=1; i<10; i++)
+...
+\end{verbatim}>>.
+
+\paragraph{Tytu³ zadania.} Interfejs testowy.
+\subparagraph{Wykonawca.} £ukasz Wide³.
+\subparagraph{Realizacja.} <<Sprawozdanie z realizacji zadania (w tym ocena zgodnoœci z estymat¹). Kod programu (œrodowisko \texttt{verbatim}): \begin{verbatim}
+for (i=1; i<10; i++)
+...
+\end{verbatim}>>.
+
+\paragraph{Tytu³ zadania.} Sk³adanie zamówieñ.
+\subparagraph{Wykonawca.} Micha³ W¹cha³a.
 \subparagraph{Realizacja.} <<Sprawozdanie z realizacji zadania (w tym ocena zgodnoœci z estymat¹). Kod programu (œrodowisko \texttt{verbatim}): \begin{verbatim}
 for (i=1; i<10; i++)
 ...
