projekt bazy cz1.
ilustracja bazy

--- a/zpi_doc_template.tex
+++ b/zpi_doc_template.tex
@@ -2,6 +2,7 @@
 \usepackage{polski}
 \usepackage[cp1250]{inputenc}
 \usepackage{url}
+\usepackage{graphicx}
 
 \title{\bf{Aplikacja WEB do obs³ugi hurtowni}}
 \author{\em Jakub Wêglarz \\ \em £ukasz Wide³ \\ \em Micha³ W¹cha³a }
@@ -298,10 +299,16 @@ Micha³ W¹cha³a \\
 
 \paragraph{Tytu³ zadania.} Zaprojektowanie i wdro¿enie bazy danych.
 \subparagraph{Wykonawca.} Micha³ W¹cha³a
-\subparagraph{Realizacja.} <<Sprawozdanie z realizacji zadania (w tym ocena zgodnoœci z estymat¹). Kod programu (œrodowisko \texttt{verbatim}): \begin{verbatim}
-for (i=1; i<10; i++)
-...
-\end{verbatim}>>.
+\subparagraph{Realizacja.} 
+
+Zaprojektowany zosta³ wstêpny projekt bazy danych. Poni¿sza grafika ilustruje tabele oraz pola w niej zawarte.
+
+
+\begin{center}
+\includegraphics[width=0.7\linewidth]{projekt_baza.png}
+\end{center}
+
+Tworzê aktualnie skrypt SQL konieczny do utworzenia bazy danych na serwerze.
 
 \paragraph{Tytu³ zadania.} Logowanie klienta.
 \subparagraph{Wykonawca.} Jakub Wêglarz.
