--- a/zpi_doc_template.tex
+++ b/zpi_doc_template.tex
@@ -310,6 +310,10 @@ Zaprojektowany zosta³ wstêpny projekt bazy danych. Poni¿sza grafika ilustruje ta
 
 Tworzê aktualnie skrypt SQL konieczny do utworzenia bazy danych na serwerze.
 
+Utworzony zosta³ skrypt uruchamiaj¹cy bazê danych, oraz skrypt testowy, zawieraj¹cy kilka wpisów do tabel.
+Wszystko zosta³o przes³ane do zdalnego repozytorium w za³¹czniku.
+Modyfikacji uleg³a tabela "zamowienie", mianowicie doda³em dodatkowe pola o nazwach "status" oraz "data_dostarczenia".
+
 \paragraph{Tytu³ zadania.} Logowanie klienta.
 \subparagraph{Wykonawca.} Jakub Wêglarz.
 \subparagraph{Realizacja.} <<Sprawozdanie z realizacji zadania (w tym ocena zgodnoœci z estymat¹). Kod programu (œrodowisko \texttt{verbatim}): \begin{verbatim}
