--- a/zpi_doc_template.tex
+++ b/zpi_doc_template.tex
@@ -330,10 +330,13 @@ for (i=1; i<10; i++)
 
 \paragraph{Tytu³ zadania.} Interfejs testowy.
 \subparagraph{Wykonawca.} £ukasz Wide³.
-\subparagraph{Realizacja.} <<Sprawozdanie z realizacji zadania (w tym ocena zgodnoœci z estymat¹). Kod programu (œrodowisko \texttt{verbatim}): \begin{verbatim}
-for (i=1; i<10; i++)
-...
-\end{verbatim}>>.
+\subparagraph{Realizacja.} <<Sprawozdanie z realizacji zadania (w tym ocena zgodnoœci z estymat¹). 
+Kod programu (œrodowisko \texttt{verbatim}): 
+\begin{verbatim}
+
+
+
+\end{verbatim}.
 
 \paragraph{Tytu³ zadania.} Sk³adanie zamówieñ.
 \subparagraph{Wykonawca.} Micha³ W¹cha³a.
@@ -346,7 +349,7 @@ for (i=1; i<10; i++)
 
 
 \subsection{Sprint Review/Demo}
-<<Sprawozdanie z przegl¹du Sprint'u -- czy za³o¿ony cel (przyrost) zosta³ osi¹gniêty oraz czy wszystkie zaplanowane Backlog Item'y zosta³y zrealizowane? Demostracja przyrostu produktu>>.
+<<Sprawozdanie z przegl¹du Sprint'u - czy za³o¿ony cel (przyrost) zosta³ osi¹gniêty oraz czy wszystkie zaplanowane Backlog Item'y zosta³y zrealizowane? Demostracja przyrostu produktu>>.
 
 \section{Sprint 2}
 
