--- a/zpi_doc_template.tex
+++ b/zpi_doc_template.tex
@@ -330,13 +330,13 @@ for (i=1; i<10; i++)
 
 \paragraph{Tytu³ zadania.} Interfejs testowy.
 \subparagraph{Wykonawca.} £ukasz Wide³.
-\subparagraph{Realizacja.} <<Sprawozdanie z realizacji zadania (w tym ocena zgodnoœci z estymat¹). 
-Kod programu (œrodowisko \texttt{verbatim}): 
-\begin{verbatim}
+\subparagraph{Realizacja.} 
+
+Zbudowany zosta³ interfejs graficzny do testowania aktualnych funkcjonalnoœci platformy zarówno po stronie klienta jak i pracownika. Narazie sk³ada siê on z dwóch plików, \textbf{index.html} oraz \textbf{style.css}.\\
+ W pliku index.html zawarta zosta³a ca³a treœæ i wszystkie funkcjonalnoœci strony. Struktura witryny oparta zosta³a na divach. W pliku style.css znajduje siê jej wygl¹d tj. rozmiar, krój czcionek czy kolory w poszczególnych elementach blokowych.
+Wszystko zosta³o przes³ane do zdalnego repozytorium.
 
 
-
-\end{verbatim}.
 
 \paragraph{Tytu³ zadania.} Sk³adanie zamówieñ.
 \subparagraph{Wykonawca.} Micha³ W¹cha³a.
