--- a/zpi_doc_template.tex
+++ b/zpi_doc_template.tex
@@ -161,103 +161,98 @@ Micha³ W¹cha³a \\
 \paragraph{Priorytet.} Bardzo Wa¿ne.
 \paragraph{Definition of Done.} Klient ma mo¿liwoœæ zalogowania siê do systemu podaj¹c login i has³o ustalone przez administratora. Zaimplementowana jest obs³uga sesji logowania.
 
-\subsection{Backlog Item 3}
-\paragraph{Tytu³ zadania.} Logowanie pracownika.
-\paragraph{Opis zadania.} Utworzenie interfejsu graficznego oraz napisanie skryptu logowania pracownika wraz z obs³ug¹ sesji.
-\paragraph{Priorytet.} Bardzo Wa¿ne.
-\paragraph{Definition of Done.} Pracownik ma mo¿liwoœæ zalogowania siê do systemu podaj¹c login i has³o ustalone przez administratora. Zaimplementowana jest obs³uga sesji logowania.
 
-\subsection{Backlog Item 4}
+\subsection{Backlog Item 3}
 \paragraph{Tytu³ zadania.} Interfejs testowy.
 \paragraph{Opis zadania.} Zaprojektowanie i wdro¿enie interfejsu graficznego do testowania aktualnych funkcjonalnoœci platformy zarówno po stronie klienta jak pracownika.
 \paragraph{Priorytet.} Bardzo Wa¿ne.
 \paragraph{Definition of Done.} Interfejs daje mo¿liwoœc wywo³ania i obs³ugi ka¿dej funkcji w aktualnej wersji aplikacji.
 
-\subsection{Backlog Item 5}
+\subsection{Backlog Item 4}
 \paragraph{Tytu³ zadania.} Interfejs graficzny GUI.
 \paragraph{Opis zadania.} Zaprojektowanie i wdro¿enie interfejsu graficznego do obs³ugi wszystkich funkcjonalnoœci platformy zarówno po stronie klienta jak pracownika.
 \paragraph{Priorytet.} Bardzo Wa¿ne.
 \paragraph{Definition of Done.} Interfejs daje mo¿liwoœc wywo³ania i obs³ugi ka¿dej funkcji w aktualnej wersji aplikacji.
 
-\subsection{Backlog Item 6}
+\subsection{Backlog Item 5}
 \paragraph{Tytu³ zadania.} Sk³adanie zamówieñ.
 \paragraph{Opis zadania.} Zaprojektowanie i wdro¿enie skryptu php umo¿liwiaj¹cego z³o¿enie zamówienia czyli zapisanie w bazie danych o produktach wybranych przez klienta. Zaprojektowanie i wdro¿enie interfejsu w jêzyku html do obs³ugi skryptu.
 \paragraph{Priorytet.} Bardzo Wa¿ne.
 \paragraph{Definition of Done.} Klient ma mo¿liwoœæ wskazania produktów i  z³o¿enia zamówienia, które zostaje zapisane w bazie danych.
 
-\subsection{Backlog Item 7}
+\subsection{Backlog Item 6}
 \paragraph{Tytu³ zadania.} Podgl¹d dostêpnych produktów.
 \paragraph{Opis zadania.} Zaprojektowanie skryptu pozwalaj¹cego przegl¹daæ wszystkie dostêpne produkty wg kategorii zaznaczonej przez klienta, czyli pobieraj¹cego dane z bazy.
 \paragraph{Priorytet.} Bardzo Wa¿ne.
 \paragraph{Definition of Done.} Klient ma mo¿liwoœæ z³o¿enia zamówienia, które zostaje zapisane w bazie danych.
 
-\subsection{Backlog Item 8}
+\subsection{Backlog Item 7}
 \paragraph{Tytu³ zadania.} Wyszukiwanie produktów.
 \paragraph{Opis zadania.} Zaprojektowanie i wdro¿enie skryptu pozwalaj¹cego wyszukaæ produkty po fragmencie nazwy.
 \paragraph{Priorytet.} Bardzo Wa¿ne.
 \paragraph{Definition of Done.} Klient ma mo¿liwoœæ wpisania fragmentu nazwy a skrypt wyszuka produkty zawieraj¹ce dan¹ frazê i wyœwietli je w formie tabelki.
 
-\subsection{Backlog Item 9}
+\subsection{Backlog Item 8}
 \paragraph{Tytu³ zadania.} Podgl¹d zamówienia przed wys³aniem.
 \paragraph{Opis zadania.} Zaprojektowanie i wdro¿enie skryptu wyœwietlaj¹cego zawartoœæ zamówienia z podliczeniem cen.
 \paragraph{Priorytet.} Bardzo Wa¿ne.
 \paragraph{Definition of Done.} Klient po wype³nieniu formularza zamówienia mo¿e zobaczyæ jego podgl¹d z wyliczonymi kwotami do zap³aty.
 
-\subsection{Backlog Item 10}
+\subsection{Backlog Item 9}
 \paragraph{Tytu³ zadania.} Sprawdzanie stanu realizacji zamówienia.
 \paragraph{Opis zadania.} Zaprojektowanie i wdro¿enie skryptu wyœwietlaj¹cego historiê zamówieñ klienta wraz z polem "stan zamówienia" które wyœwietla jego stan w formie 1-oczekuje 2-realizowane 3-wys³ano.
 \paragraph{Priorytet.} Bardzo Wa¿ne.
 \paragraph{Definition of Done.} Klient widzi historiê swoich zamówieñ wraz ze stanami realizacji.
 
-\subsection{Backlog Item 11}
+\subsection{Backlog Item 10}
 \paragraph{Tytu³ zadania.} Zmiana stanu zamówienia.
 \paragraph{Opis zadania.} Zaprojektowanie i wdro¿enie skryptu pozwalaj¹cego pracownikowi zmieniæ stan zamówienia.
 \paragraph{Priorytet.} Bardzo Wa¿ne.
 \paragraph{Definition of Done.} Pracownik mo¿e dowolnie zmieniaæ stany zamówieñ wyœwietlonych na liœcie.
 
-\subsection{Backlog Item 12}
+\subsection{Backlog Item 11}
 \paragraph{Tytu³ zadania.} Zamówienie towaru do magazynu.
 \paragraph{Opis zadania.} Zaprojektowanie i wdro¿enie skryptu pozwalaj¹cego wygenerowaæ i wys³aæ mailem zamówienie do dostawcy.
 \paragraph{Priorytet.} Bardzo Wa¿ne.
 \paragraph{Definition of Done.} Pracownik mo¿e z³o¿yæ zamówienie które zostanie automatycznie wys³ane na maila dostawcy.
 
-\subsection{Backlog Item 13}
+\subsection{Backlog Item 12}
 \paragraph{Tytu³ zadania.} Sprawdzenie stanu magazynu.
 \paragraph{Opis zadania.} Zaprojektowanie i wdro¿enie skryptu do pogdl¹du stanów magazynowych wszystkich produktów z uwzglêdnieniem kategorii produktów.
 \paragraph{Priorytet.} Bardzo Wa¿ne.
 \paragraph{Definition of Done.} Pracownik mo¿e sprawdzaæ stany magazynowe produktów.
 
-\subsection{Backlog Item 14}
+\subsection{Backlog Item 13}
 \paragraph{Tytu³ zadania.} Edycja zamówienia z poziomu podgl¹du.
 \paragraph{Opis zadania.} Zaprojektowanie i wdro¿enie skryptu pozwalaj¹cego na edycjê zamówienia z poziomu podgl¹du.
 \paragraph{Priorytet.} Wa¿ne.
 \paragraph{Definition of Done.} Klient mo¿e poprawiæ zamówienie przed zatwierdzeniem.
 
-\subsection{Backlog Item 15}
+\subsection{Backlog Item 14}
 \paragraph{Tytu³ zadania.} Pobieranie faktur.
 \paragraph{Opis zadania.} Zaprojektowanie i wdro¿enie skryptu pozwalaj¹cego pobraæ wygenerowan¹ wczeœniej fakturê.
 \paragraph{Priorytet.} Wa¿ne.
 \paragraph{Definition of Done.} Klient mo¿e pobraæ fakturê po zalogowaniu do swojego konta.
 
-\subsection{Backlog Item 16}
+\subsection{Backlog Item 15}
 \paragraph{Tytu³ zadania.} Dodawanie i edycja danych osobowych.
 \paragraph{Opis zadania.} Zaprojektowanie i wdro¿enie skryptu pozwalaj¹cego klientowi dodaæ lub edytowaæ swoje dane osobowe.
 \paragraph{Priorytet.} Wa¿ne.
 \paragraph{Definition of Done.} Klient mo¿e dowolnie dodawaæ i zmieniaæ swoje dane osobowe.
 
-\subsection{Backlog Item 17}
+\subsection{Backlog Item 16}
 \paragraph{Tytu³ zadania.} Generowanie faktur.
 \paragraph{Opis zadania.} Zaprojektowanie i wdro¿enie skryptu generuj¹cego faktury z zamówieñ.
 \paragraph{Priorytet.} Wa¿ne.
 \paragraph{Definition of Done.} Pracownik mo¿e wygenerowaæ fakturê po zrealizowaniu zamówienia.
 
-\subsection{Backlog Item 18}
+\subsection{Backlog Item 17}
 \paragraph{Tytu³ zadania.} Faktura na email
 \paragraph{Opis zadania.} Zaprojektowanie i wdro¿enie skryptu wysy³aj¹cego fakturê na email klienta.
 \paragraph{Priorytet.} Opcjonalne.
 \paragraph{Definition of Done.} Klient otrzymuje faktury na email.
 
-\subsection{Backlog Item 19}
+\subsection{Backlog Item 18}
 \paragraph{Tytu³ zadania.} Zestawienia
 \paragraph{Opis zadania.} Zaprojektowanie i wdro¿enie skryptu pozwalaj¹cego pracownikowi na podgl¹d zestawieñ sprzeda¿y.
 \paragraph{Priorytet.} Opcjonalne.
@@ -274,14 +269,9 @@ Micha³ W¹cha³a \\
 \item Estymata: XL
 \end{itemize}
 
-\paragraph{Tytu³ zadania.} Logowanie klienta.
+\paragraph{Tytu³ zadania.} Logowanie.
 \begin{itemize}
-\item Estymata: L
-\end{itemize}
-
-\paragraph{Tytu³ zadania.} Logowanie pracownika.
-\begin{itemize}
-\item Estymata: L
+\item Estymata: M
 \end{itemize}
 
 \paragraph{Tytu³ zadania.} Interfejs testowy.
@@ -293,8 +283,7 @@ Micha³ W¹cha³a \\
 \begin{itemize}
 \item Estymata: XL
 \end{itemize}
-
-
+\newpage
 \subsection{Realizacja}
 
 \paragraph{Tytu³ zadania.} Zaprojektowanie i wdro¿enie bazy danych.
@@ -314,20 +303,20 @@ Utworzony zosta³ skrypt uruchamiaj¹cy bazê danych, oraz skrypt testowy, zawieraj
 Wszystko zosta³o przes³ane do zdalnego repozytorium w za³¹czniku.
 Modyfikacji uleg³a tabela $"zamowienie"$, mianowicie doda³em dodatkowe pola o nazwach $"status"$ oraz $"data dostarczenia"$.
 
-\paragraph{Tytu³ zadania.} Logowanie klienta.
+\paragraph{Tytu³ zadania.} Logowanie.
 \subparagraph{Wykonawca.} Jakub Wêglarz.
-\subparagraph{Realizacja.} <<Sprawozdanie z realizacji zadania (w tym ocena zgodnoœci z estymat¹). Kod programu (œrodowisko \texttt{verbatim}): \begin{verbatim}
-for (i=1; i<10; i++)
-...
-\end{verbatim}>>.
-
-\paragraph{Tytu³ zadania.} Logowanie pracownika.
-\subparagraph{Wykonawca.} Jakub Wêglarz.
-\subparagraph{Realizacja.} <<Sprawozdanie z realizacji zadania (w tym ocena zgodnoœci z estymat¹). Kod programu (œrodowisko \texttt{verbatim}): \begin{verbatim}
-for (i=1; i<10; i++)
-...
-\end{verbatim}>>.
-
+\subparagraph{Realizacja.} 
+Zaprojektowa³em interfejs oraz skrypt s³u¿¹cy do logowania, zaimplementowana zosta³a obs³uga zmiennych sesyjnych, pliki zosta³y zabezpieczone przed prób¹ obejœcia logowania a sam skrypt zaprogramowany w sposób uniemo¿liwiaj¹cy wykonanie iniekcji SQL czyli ataku polegaj¹cego na manipulacji znakami komentarza.
+ Zadanie sk³ada siê z czterech plików: \newline$login.php, zaloguj.php, connect.php$ oraz $wyloguj.php.$ 
+ 
+ Plik $login.php$ jest plikiem g³ównym zawieraj¹cym formularz logowania. 
+ 
+ Plik $zaloguj.php$ zawiera w³aœciwy skrypt logowania oparty na zmiennych sesyjnych. 
+ 
+ Plik $connect.php$ jest plikiem pomocniczym który zawiera wszystkie dane potrzebne do po³¹czenia z baz¹ $MySQL$, takie dzia³anie ma na celu uniemo¿liwienie podgl¹dniêcia permisji bazodanowych. 
+ 
+ Ostatni plik, $wyloguj.php,$ to skrypt kasuj¹cy sesjê czyli wylogowuj¹cy aktywnego u¿ytkownika, natychmiastowo koñczy sesjê i kasuje wszystkie zmienne globalne przechowywane w tablicy $"\$\_SESSION"$.
+\newpage
 \paragraph{Tytu³ zadania.} Interfejs testowy.
 \subparagraph{Wykonawca.} £ukasz Wide³.
 \subparagraph{Realizacja.} 
