--- a/dokumentacja/zpi_doc_template.tex
+++ b/dokumentacja/zpi_doc_template.tex
@@ -279,6 +279,11 @@ Micha³ W¹cha³a \\
 \item Estymata: M
 \end{itemize}
 
+\paragraph{Tytu³ zadania.} Skrypt koszyka.
+\begin{itemize}
+\item Estymata: XL
+\end{itemize}
+
 \paragraph{Tytu³ zadania.} Sk³adanie zamówieñ.
 \begin{itemize}
 \item Estymata: XL
@@ -327,10 +332,13 @@ Wszystko zosta³o przes³ane do zdalnego repozytorium.
 
 
 
+\paragraph{Tytu³ zadania.} Skrypt koszyka
+\subparagraph{Wykonawca.} Jakub Wêglarz
+\subparagraph{Realizacja.} 
+
 \paragraph{Tytu³ zadania.} Sk³adanie zamówieñ.
-\subparagraph{Wykonawca.} Micha³ W¹cha³a.
-\subparagraph{Realizacja.} <<Sprawozdanie z realizacji zadania (w tym ocena zgodnoœci z estymat¹). Kod programu (œrodowisko \texttt{verbatim}): \begin{verbatim}
-for (i=1; i<10; i++)
+\subparagraph{Wykonawca.} Micha³ W¹cha³a
+\subparagraph{Realizacja.}
 ...
 \end{verbatim}>>.
 
