--- a/dokumentacja/zpi_doc_template.tex
+++ b/dokumentacja/zpi_doc_template.tex
@@ -176,7 +176,7 @@ Micha³ W¹cha³a \\
 
 \subsection{Backlog Item 5}
 \paragraph{Tytu³ zadania.} Sk³adanie zamówieñ.
-\paragraph{Opis zadania.} Zaprojektowanie i wdro¿enie skryptu php umo¿liwiaj¹cego z³o¿enie zamówienia czyli zapisanie w bazie danych o produktach wybranych przez klienta. Zaprojektowanie i wdro¿enie interfejsu w jêzyku html do obs³ugi skryptu.
+\paragraph{Opis zadania.} Zaprojektowanie i wdro¿enie skryptu php umo¿liwiaj¹cego z³o¿enie zamówienia czyli zapisanie w bazie danych o produktach wybranych przez klienta. Zaprojektowanie tzw. "koszyka" umo¿liwiaj¹cego podgl¹d zamówionych produktów przed wys³aniem zamówienia.  Zaprojektowanie i wdro¿enie interfejsu w jêzyku html do obs³ugi skryptu.
 \paragraph{Priorytet.} Bardzo Wa¿ne.
 \paragraph{Definition of Done.} Klient ma mo¿liwoœæ wskazania produktów i  z³o¿enia zamówienia, które zostaje zapisane w bazie danych.
 
@@ -332,11 +332,7 @@ Wszystko zosta³o przes³ane do zdalnego repozytorium.
 
 
 
-\paragraph{Tytu³ zadania.} Skrypt koszyka
-\subparagraph{Wykonawca.} Jakub Wêglarz
-\subparagraph{Realizacja.} 
-
-\paragraph{Tytu³ zadania.} Sk³adanie zamówieñ.
+ \paragraph{Tytu³ zadania.} Sk³adanie zamówieñ.
 \subparagraph{Wykonawca.} Micha³ W¹cha³a
 \subparagraph{Realizacja.}
 ...
