--- a/dokumentacja/zpi_doc_template.tex
+++ b/dokumentacja/zpi_doc_template.tex
@@ -334,13 +334,14 @@ Wszystko zosta³o przes³ane do zdalnego repozytorium.
 
 \paragraph{Tytu³ zadania.} Skrypt koszyka
 \subparagraph{Wykonawca.} Jakub Wêglarz
-\subparagraph{Realizacja.} 
-
+\subparagraph{Realizacja.} Skrypt koszyka korzysta ze zmiennych sesyjnych oraz danych przesy³anych na bie¿¹co tablic¹ globaln¹ $"\$\_POST"$.
+Dzia³anie skryptu jest wywo³ywane przez przekierowanie akcji z formularza zawartego w pliku\\ $wyswietl\_produkty.php$ przez klikniêcie przycisku $Dodaj$ $do$ $koszyka$. W tym momencie dane s¹ przesy³ane do pliku $function.php$ i to w³aœnie tam nastêpuje walidacja danych oraz zapisanie informacji o dodanym produkcie oraz jego iloœci do tabeli sesyjnej $\$\_SESSION['koszyk']$.
+Skrypt zosta³ zabezpieczony przed dodaniem do tablicy produktu z zerow¹ iloœci¹
 \paragraph{Tytu³ zadania.} Sk³adanie zamówieñ.
 \subparagraph{Wykonawca.} Micha³ W¹cha³a
 \subparagraph{Realizacja.}
 ...
-\end{verbatim}>>.
+
 
 \paragraph{<<Tutaj dodawaæ kolejne zadania>>}
 
