Update koszyka i dokumentacji
Update koszyka i dokumentacji

--- a/dokumentacja/zpi_doc_template.tex
+++ b/dokumentacja/zpi_doc_template.tex
@@ -271,12 +271,12 @@ Micha³ W¹cha³a \\
 
 \paragraph{Tytu³ zadania.} Logowanie.
 \begin{itemize}
-\item Estymata: M
+\item Estymata: XL
 \end{itemize}
 
 \paragraph{Tytu³ zadania.} Interfejs testowy.
 \begin{itemize}
-\item Estymata: M
+\item Estymata: L
 \end{itemize}
 
 \paragraph{Tytu³ zadania.} Skrypt koszyka.
@@ -345,6 +345,8 @@ Dzia³anie skryptu jest wywo³ywane przez przekierowanie akcji z formularza zawart
 Skrypt zosta³ zabezpieczony przed dodaniem do tablicy produktu z zerow¹ iloœci¹.
 
 Plik $pokaz\_koszyk.php$ zawiera skrypt odczytuj¹cy zawartoœæ tablicy sesyjnej $\$\_SESSION['koszyk']$ w celu sprawdzenia zawartoœci koszyka i z³o¿enia zamówienia.
+
+Koszyk w aktualnej wersji posiada zaimplementowan¹ funkcjê sk³adania wielokrotnie dodanych produktów do koszyka w jedn¹ pozycjê.
 
 
 
