--- a/dokumentacja/zpi_doc_template.tex
+++ b/dokumentacja/zpi_doc_template.tex
@@ -358,37 +358,83 @@ Zamawianie produktów odbywa siê poprzez wciœniêcie przycisku $zloz$ $zamowienie$
 
 
 \subsection{Sprint Review/Demo}
-<<Sprawozdanie z przegl¹du Sprint'u - czy za³o¿ony cel (przyrost) zosta³ osi¹gniêty oraz czy wszystkie zaplanowane Backlog Item'y zosta³y zrealizowane? Demostracja przyrostu produktu>>.
-
+Zaplanowany przyrost zosta³ osi¹gniêty, prezentacja przebieg³a pomyœlnie, wszystkie funkcjonalnoœci programu dzia³aj¹ bez zastrze¿eñ.
 \section{Sprint 2}
 
-\subsection{Cel} <<Okreœliæ, w jakim celu tworzony jest przyrost produktu>>.
+\subsection{Cel} Celem drugiego sprintu jest rozszerzenie funkcjonalnoœci platformy o elementy zwi¹zane z wyszukiwaniem produktów i kontrolowaniem stanów zamówieñ rozbudowanie interfejsu graficznego oraz generowanie faktur.
 
 \subsection{Sprint Planning/Backlog}
 
-\paragraph{Tytu³ zadania.} <<Tytu³>>.
+\paragraph{Tytu³ zadania.} Wyszukiwanie produktów.
 \begin{itemize}
-\item Estymata: <<szacowana czasoch³onnoœæ (w ,,koszulkach'')>>.
+\item Estymata: L
 \end{itemize}
 
-\paragraph{Tytu³ zadania.} <<Tytu³>>.
+\paragraph{Tytu³ zadania.} Sprawdzanie stanu realizacji zamówienia.
 \begin{itemize}
-\item Estymata: <<szacowana czasoch³onnoœæ (w ,,koszulkach'')>>.
+\item Estymata: M
 \end{itemize}
+
+\paragraph{Tytu³ zadania.} Zmiana stanu zamówienia.
+\begin{itemize}
+	\item Estymata: M
+\end{itemize}
+
+\paragraph{Tytu³ zadania.} Sprawdzanie stanu magazynu.
+\begin{itemize}
+	\item Estymata: M
+\end{itemize}
+
+\paragraph{Tytu³ zadania.} GUI.
+\begin{itemize}
+	\item Estymata: L
+\end{itemize}
+
+\paragraph{Tytu³ zadania.} Generowanie faktur.
+\begin{itemize}
+	\item Estymata: XL.
+\end{itemize}
+
 
 \paragraph{<<Tutaj dodawaæ kolejne zadania>>}
 
 \subsection{Realizacja}
 
-\paragraph{Tytu³ zadania.} <<Tytu³>>.
-\subparagraph{Wykonawca.} <<Wykonawca>>.
+\paragraph{Tytu³ zadania.} Wyszukiwanie produktów.
+\subparagraph{Wykonawca.} £ukasz Wide³.
 \subparagraph{Realizacja.} <<Sprawozdanie z realizacji zadania (w tym ocena zgodnoœci z estymat¹). Kod programu (œrodowisko \texttt{verbatim}): \begin{verbatim}
 for (i=1; i<10; i++)
 ...
 \end{verbatim}>>.
 
-\paragraph{Tytu³ zadania.} <<Tytu³>>.
-\subparagraph{Wykonawca.} <<Wykonawca>>.
+\paragraph{Tytu³ zadania.} Sprawdzanie stanu zamówienia.
+\subparagraph{Wykonawca.} Jakub Wêglarz.
+\subparagraph{Realizacja.} <<Sprawozdanie z realizacji zadania (w tym ocena zgodnoœci z estymat¹). Kod programu (œrodowisko \texttt{verbatim}): \begin{verbatim}
+for (i=1; i<10; i++)
+...
+\end{verbatim}>>.
+
+\paragraph{Tytu³ zadania.} Zmiana stanu zamówienia.
+\subparagraph{Wykonawca.} Jakub Wêglarz.
+\subparagraph{Realizacja.} <<Sprawozdanie z realizacji zadania (w tym ocena zgodnoœci z estymat¹). Kod programu (œrodowisko \texttt{verbatim}): \begin{verbatim}
+for (i=1; i<10; i++)
+...
+\end{verbatim}>>.
+
+\paragraph{Tytu³ zadania.} Sprawdzanie stanu magazynu.
+\subparagraph{Wykonawca.} £ukasz Wide³.
+\subparagraph{Realizacja.} <<Sprawozdanie z realizacji zadania (w tym ocena zgodnoœci z estymat¹). Kod programu (œrodowisko \texttt{verbatim}): \begin{verbatim}
+for (i=1; i<10; i++)
+...
+\end{verbatim}>>.
+\paragraph{Tytu³ zadania.} GUI.
+\subparagraph{Wykonawca.} Micha³ W¹cha³a.
+\subparagraph{Realizacja.} <<Sprawozdanie z realizacji zadania (w tym ocena zgodnoœci z estymat¹). Kod programu (œrodowisko \texttt{verbatim}): \begin{verbatim}
+for (i=1; i<10; i++)
+...
+\end{verbatim}>>.
+\paragraph{Tytu³ zadania.} Generowanie Faktur.
+\subparagraph{Wykonawca.} Jakub Wêglarz.
 \subparagraph{Realizacja.} <<Sprawozdanie z realizacji zadania (w tym ocena zgodnoœci z estymat¹). Kod programu (œrodowisko \texttt{verbatim}): \begin{verbatim}
 for (i=1; i<10; i++)
 ...
