dokumentacja wyszukiwania produktow

--- a/dokumentacja/zpi_doc_template.tex
+++ b/dokumentacja/zpi_doc_template.tex
@@ -395,17 +395,14 @@ Zaplanowany przyrost zosta³ osi¹gniêty, prezentacja przebieg³a pomyœlnie, wszyst
 	\item Estymata: XL.
 \end{itemize}
 
-
-\paragraph{<<Tutaj dodawaæ kolejne zadania>>}
-
 \subsection{Realizacja}
+
 
 \paragraph{Tytu³ zadania.} Wyszukiwanie produktów.
 \subparagraph{Wykonawca.} £ukasz Wide³.
-\subparagraph{Realizacja.} <<Sprawozdanie z realizacji zadania (w tym ocena zgodnoœci z estymat¹). Kod programu (œrodowisko \texttt{verbatim}): \begin{verbatim}
-for (i=1; i<10; i++)
-...
-\end{verbatim}>>.
+\subparagraph{Realizacja.} Zosta³a rozszerzona funkcjonalnoœæ w postaci wyszukiwania produktów. Zawarte jest to w dwóch plikach, \textbf{szukaj.php} oraz \textbf{wyszukaj produkt.php}. Mo¿emy wpisaæ wyszukiwany przez nas produkt. Zosta³y równie¿ zawarte pola typu radiobox co daje nam mo¿liwoœæ wyszukiwania produktu wed³ug kategorii, nazwy b¹dŸ numeru katalogowego produktu.
+
+
 
 \paragraph{Tytu³ zadania.} Sprawdzanie stanu zamówienia.
 \subparagraph{Wykonawca.} Jakub Wêglarz.
@@ -423,10 +420,11 @@ for (i=1; i<10; i++)
 
 \paragraph{Tytu³ zadania.} Sprawdzanie stanu magazynu.
 \subparagraph{Wykonawca.} £ukasz Wide³.
-\subparagraph{Realizacja.} <<Sprawozdanie z realizacji zadania (w tym ocena zgodnoœci z estymat¹). Kod programu (œrodowisko \texttt{verbatim}): \begin{verbatim}
-for (i=1; i<10; i++)
-...
-\end{verbatim}>>.
+\subparagraph{Realizacja.} 
+Utworzony zosta³ plik \textbf{sprawdz stan magazynu.php} dziêki któremu pracownik hurtowni ma mo¿liwoœæ sprawdzenia stanu magazynu.
+Wyœwietlane s¹ dwie kolumny, pierwsza z nazw¹ produktu, druga natomiast z iloœci¹ która jest aktualnie dostêpna na magazynie. Wszystkie produkty s¹ kolejno ponumerowane.
+
+
 \paragraph{Tytu³ zadania.} GUI.
 \subparagraph{Wykonawca.} Micha³ W¹cha³a.
 \subparagraph{Realizacja.} <<Sprawozdanie z realizacji zadania (w tym ocena zgodnoœci z estymat¹). Kod programu (œrodowisko \texttt{verbatim}): \begin{verbatim}
