--- a/dokumentacja/zpi_doc_template.tex
+++ b/dokumentacja/zpi_doc_template.tex
@@ -243,7 +243,7 @@ Micha³ W¹cha³a \\
 \subsection{Backlog Item 16}
 \paragraph{Tytu³ zadania.} Generowanie faktur.
 \paragraph{Opis zadania.} Zaprojektowanie i wdro¿enie skryptu generuj¹cego faktury z zamówieñ.
-\paragraph{Priorytet.} Wa¿ne.
+\paragraph{Priorytet.} Opcjonalne.
 \paragraph{Definition of Done.} Pracownik mo¿e wygenerowaæ fakturê po zrealizowaniu zamówienia.
 
 \subsection{Backlog Item 17}
@@ -427,10 +427,9 @@ Wyœwietlane s¹ dwie kolumny, pierwsza z nazw¹ produktu, druga natomiast z iloœci
 
 \paragraph{Tytu³ zadania.} GUI.
 \subparagraph{Wykonawca.} Micha³ W¹cha³a.
-\subparagraph{Realizacja.} <<Sprawozdanie z realizacji zadania (w tym ocena zgodnoœci z estymat¹). Kod programu (œrodowisko \texttt{verbatim}): \begin{verbatim}
-for (i=1; i<10; i++)
-...
-\end{verbatim}>>.
+\subparagraph{Realizacja.} Stworzy³em przyjemniejsze dla oka, lepiej funkcjonuj¹ce menu g³ówne w CSS'ie. Zajmuje ono mniej miejsca na stronie, opcje zawieraj¹ siê w wysuwanych przyciskach. 
+Poprawi³em tak¿e przycisk s³u¿¹cy do wylogowywania siê z aplikacji.
+Poprawi³em funkcjonalnoœæ aplikacji poprzez rozdzielenie opcji menu dla pracownika oraz dla klienta. Klient loguj¹c siê na swoje konto widzi tylko opcje które tylko on mo¿e wybraæ, podobnie jak pracownik. 
 \paragraph{Tytu³ zadania.} Generowanie Faktur.
 \subparagraph{Wykonawca.} Jakub Wêglarz.
 \subparagraph{Realizacja.} <<Sprawozdanie z realizacji zadania (w tym ocena zgodnoœci z estymat¹). Kod programu (œrodowisko \texttt{verbatim}): \begin{verbatim}
