--- a/dokumentacja/zpi_doc_template.tex
+++ b/dokumentacja/zpi_doc_template.tex
@@ -372,12 +372,12 @@ Zaplanowany przyrost zosta³ osi¹gniêty, prezentacja przebieg³a pomyœlnie, wszyst
 
 \paragraph{Tytu³ zadania.} Sprawdzanie stanu realizacji zamówienia.
 \begin{itemize}
-\item Estymata: M
+\item Estymata: L
 \end{itemize}
 
 \paragraph{Tytu³ zadania.} Zmiana stanu zamówienia.
 \begin{itemize}
-	\item Estymata: M
+	\item Estymata: L
 \end{itemize}
 
 \paragraph{Tytu³ zadania.} Sprawdzanie stanu magazynu.
@@ -392,7 +392,7 @@ Zaplanowany przyrost zosta³ osi¹gniêty, prezentacja przebieg³a pomyœlnie, wszyst
 
 \paragraph{Tytu³ zadania.} Generowanie faktur.
 \begin{itemize}
-	\item Estymata: XL.
+	\item Estymata: XXL.
 \end{itemize}
 
 \subsection{Realizacja}
@@ -406,17 +406,13 @@ Zaplanowany przyrost zosta³ osi¹gniêty, prezentacja przebieg³a pomyœlnie, wszyst
 
 \paragraph{Tytu³ zadania.} Sprawdzanie stanu zamówienia.
 \subparagraph{Wykonawca.} Jakub Wêglarz.
-\subparagraph{Realizacja.} <<Sprawozdanie z realizacji zadania (w tym ocena zgodnoœci z estymat¹). Kod programu (œrodowisko \texttt{verbatim}): \begin{verbatim}
-for (i=1; i<10; i++)
-...
-\end{verbatim}>>.
+\subparagraph{Realizacja.} Wykona³em skrypt pozwalaj¹cy na podgl¹d stanu zamówienia. Stan zamówienai jest zapisany w bazie i jest reprezentowany przez 3 wartoœci: zamówione, w realizacji, wys³ane.
 
 \paragraph{Tytu³ zadania.} Zmiana stanu zamówienia.
 \subparagraph{Wykonawca.} Jakub Wêglarz.
-\subparagraph{Realizacja.} <<Sprawozdanie z realizacji zadania (w tym ocena zgodnoœci z estymat¹). Kod programu (œrodowisko \texttt{verbatim}): \begin{verbatim}
-for (i=1; i<10; i++)
-...
-\end{verbatim}>>.
+\subparagraph{Realizacja.} Wykona³em skrypt pozwalaj¹cy na zmianê stanu zamówienia przez pracownika hurtowni.
+Stan jest zmieniany poprzez wybór odpowiedniej opcji z rozwijanej listy i zaakceptowanie przyciskiem.
+
 
 \paragraph{Tytu³ zadania.} Sprawdzanie stanu magazynu.
 \subparagraph{Wykonawca.} £ukasz Wide³.
@@ -432,10 +428,7 @@ Poprawi³em tak¿e przycisk s³u¿¹cy do wylogowywania siê z aplikacji.
 Poprawi³em funkcjonalnoœæ aplikacji poprzez rozdzielenie opcji menu dla pracownika oraz dla klienta. Klient loguj¹c siê na swoje konto widzi tylko opcje które tylko on mo¿e wybraæ, podobnie jak pracownik. 
 \paragraph{Tytu³ zadania.} Generowanie Faktur.
 \subparagraph{Wykonawca.} Jakub Wêglarz.
-\subparagraph{Realizacja.} <<Sprawozdanie z realizacji zadania (w tym ocena zgodnoœci z estymat¹). Kod programu (œrodowisko \texttt{verbatim}): \begin{verbatim}
-for (i=1; i<10; i++)
-...
-\end{verbatim}>>.
+\subparagraph{Realizacja.} Zadanie przerzucone na nastêpny sprint z powodu zbyt du¿ej z³o¿onoœci.
 
 \paragraph{<<Tutaj dodawaæ kolejne zadania>>}
 
